--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch-2.1.0.dev20230318%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230318+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch-2.1.0.dev20230318%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230318+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch-2.1.0.dev20230318%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230318+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch-2.1.0.dev20230318%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230318+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch-2.1.0.dev20230318-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230318-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir-20230319.782-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230319.782-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir-20230319.782-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230319.782-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir-20230319.782-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230319.782-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir-20230319.782-cp311-cp311-win_amd64.whl'>torch_mlir-20230319.782-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir-20230319.782-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230319.782-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir_core-20230319.782-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_core-20230319.782-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir_core-20230319.782-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_core-20230319.782-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230319.782/torch_mlir_core-20230319.782-cp311-cp311-win_amd64.whl'>torch_mlir_core-20230319.782-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230318.781/torch-2.1.0.dev20230317%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230317+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230318.781/torch-2.1.0.dev20230317%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230317+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230318.781/torch-2.1.0.dev20230317%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230317+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -315,15 +328,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230224.759/torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230224.759/torch_mlir-20230224.759-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230224.759-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230224.759/torch_mlir-20230224.759-cp311-cp311-win_amd64.whl'>torch_mlir-20230224.759-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch-2.0.0.dev20230220%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230220+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch-2.0.0.dev20230220%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.0.0.dev20230220+cpu-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch-2.0.0.dev20230220%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.0.0.dev20230220+cpu-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch-2.0.0.dev20230220%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230220+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230220-cp311-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch_mlir-20230223.758-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230223.758-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch_mlir-20230223.758-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230223.758-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch_mlir-20230223.758-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230223.758-cp311-cp311-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch_mlir-20230223.758-cp311-cp311-win_amd64.whl'>torch_mlir-20230223.758-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230223.758/torch_mlir-20230223.758-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230223.758-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
